--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,7 +46,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y nodejs npm redis-server
           pip install frappe-bench
-          bench init --frappe-branch version-15 frappe-bench
+          bench init --frappe-branch version-15 frappe-bench --skip-redis-config-generation
           cd frappe-bench
           bench get-app --branch version-15 erpnext
           bench get-app https://github.com/KTA-Endustri-Sistemleri/negative_stock_control.git
