--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,7 +45,8 @@ jobs:
         run: |
           cd frappe-bench
           bench get-app --branch version-15 erpnext
-          bench get-app .  # current repo (negative_stock_control)
+          bench get-app https://github.com/KTA-Endustri-Sistemleri/negative_stock_control.git
+
 
       - name: New Site
         run: |
