feat(ci): add fallback install-app and skip search index on migrate

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -74,6 +74,9 @@ jobs:
           cd frappe-bench
           bench --site karamalli.localhost install-app negative_stock_control || \
           (cd apps/negative_stock_control && bench --site ../../../sites/karamalli.localhost install-app negative_stock_control)
+          # migrate sırasında redis index patlamasın diye skip ekledik
+          bench --site karamalli.localhost migrate --skip-search-index
+
 
       - name: Run Migrate
         run: |
