--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,35 +23,10 @@ jobs:
           --health-timeout 5s
           --health-retries 5
 
-      redis-cache:
+      redis:
         image: redis:6
         ports:
           - 6379:6379
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
-      redis-queue:
-        image: redis:6
-        ports:
-          - 6380:6379
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
-      redis-socketio:
-        image: redis:6
-        ports:
-          - 6381:6379
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
 
     steps:
       - uses: actions/checkout@v3
@@ -60,8 +35,11 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install Bench
-        run: pip install frappe-bench
+      - name: Install Bench & Redis Server
+        run: |
+          pip install frappe-bench
+          sudo apt-get update
+          sudo apt-get install -y redis-server
 
       - name: Init Bench
         run: bench init --frappe-branch v15.79.0 frappe-bench
@@ -71,7 +49,6 @@ jobs:
           cd frappe-bench
           bench get-app --branch v15.79.0 erpnext --skip-assets
           bench get-app https://github.com/KTA-Endustri-Sistemleri/negative_stock_control.git --skip-assets
-          printf "\nnegative_stock_control\n" >> sites/apps.txt
 
       - name: New Site
         run: |
@@ -87,9 +64,31 @@ jobs:
         run: |
           cd frappe-bench
           bench --site karamalli.localhost install-app negative_stock_control
+          # migrate sırasında redis index patlamasın diye skip ekledik
+          bench --site karamalli.localhost migrate --skip-search-index
+
+      - name: Run Migrate
+        run: |
+          cd frappe-bench
           bench --site karamalli.localhost migrate
 
       - name: Run Tests
         run: |
           cd frappe-bench
           bench --site karamalli.localhost run-tests --app negative_stock_control --verbose
+
+      - name: Collect Logs if Failed
+        if: failure()
+        run: |
+          cd frappe-bench
+          mkdir -p artifacts
+          cp -r logs artifacts/
+          mysqldump -h 127.0.0.1 -P 3306 -u root -proot karamalli.localhost > artifacts/db_dump.sql
+          cp sites/karamalli.localhost/site_config.json artifacts/
+
+      - name: Upload Debug Artifacts
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: erpnext-debug-artifacts
+          path: frappe-bench/artifacts
