fix(ci): ensure apps.txt entries are written on separate lines

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -53,7 +53,7 @@ jobs:
           # Olası birleşmeyi düzelt
           sed -i 's/erpnextnegative_stock_control/erpnext\nnegative_stock_control/' apps.txt
           # Eğer yoksa ekle
-          grep -qxF negative_stock_control apps.txt || echo "negative_stock_control" >> apps.txt
+          grep -qxF negative_stock_control apps.txt || printf "\nnegative_stock_control\n" >> apps.txt
           echo "--- sites/apps.txt content ---"
           cat -n apps.txt
 
