fix: remove unsupported --verbose flag from bench run-tests
The GitHub Actions workflow was failing during the test step because  `bench run-tests` on Frappe v15.79.0 does not support the `--verbose` flag.   Error message:   Error: No such option: --verbose Did you mean --coverage?  This commit removes the `--verbose` option from the Run Tests step in  tests.yml, ensuring compatibility with the current version of bench.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -112,7 +112,7 @@ jobs:
       - name: Run Tests
         run: |
           cd frappe-bench
-          bench --site karamalli.localhost run-tests --app negative_stock_control --verbose
+          bench --site karamalli.localhost run-tests --app negative_stock_control
 
       - name: Collect Logs if Failed
         if: failure()
